[gd_scene load_steps=6 format=2]

[ext_resource path="res://instances/entities/enemies/enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://instances/entities/enemies/sniper/sniper.gd" type="Script" id=2]
[ext_resource path="res://instances/entities/enemies/sniper/state_search.gd" type="Script" id=3]
[ext_resource path="res://instances/entities/enemies/sniper/sniper_details.svg" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="Sniper" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]
shape = SubResource( 1 )

[node name="StateIdle" parent="StateMachine" index="0"]
idle_spd = 0
attack_when_spotted = true
spotted_state = "StateSearch"

[node name="StateSearch" type="Node" parent="StateMachine" index="2"]
script = ExtResource( 3 )

[node name="WeaponTimer" type="Timer" parent="StateMachine/StateSearch" index="0"]
wait_time = 0.5

[node name="TrackingTimer" type="Timer" parent="StateMachine/StateSearch" index="1"]
one_shot = true

[node name="Line2D" type="Line2D" parent="StateMachine/StateSearch" index="2"]
visible = false
points = PoolVector2Array( -128, 0, 0, 0 )
width = 2.0
default_color = Color( 1, 0, 0, 1 )

[node name="Details" type="Sprite" parent="." index="3"]
use_parent_material = true
texture = ExtResource( 4 )

[node name="Sightline" parent="." index="4"]
reflex = 1.0
sight_distance = 6000
needs_timer = false

[connection signal="timeout" from="StateMachine/StateSearch/TrackingTimer" to="StateMachine/StateSearch" method="_on_TrackingTimer_timeout"]
[connection signal="player_lost" from="Sightline" to="StateMachine/StateSearch" method="_on_Sightline_player_lost"]
